--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>{{title}}</h1>
+<div class="text-center">
+  <h1 >{{title}}</h1>
+</div>
+
+
+<button mat-stroked-button>foo</button>
+<app-airport-names></app-airport-names>
