--- a/src/app/airport-names/airport-names.component.html
+++ b/src/app/airport-names/airport-names.component.html
@@ -1,14 +1,22 @@
-<div>
-<mat-form-field>
-<mat-label>Choose Airport</mat-label>
- <mat-select>
-   <mat-option *ngFor="let airport of AirportNames" [value]="airport.name" (click)="onSelect(airport.name)">
-     {{airport.name}}
-   </mat-option>
- </mat-select>
-<div class="">
-   <input matInput type="number" placeholder="Min value" [(ngModel)]="min">
- </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6">
+      <mat-form-field>
+        <mat-label>Choose Airport</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let airport of AirportNames" [value]="airport.name" (click)="onSelect(airport.name)">
+            {{airport.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+      </div>
+    <div class="row">
+      <div class="col-md-6>">
+        <mat-form-field>
+        <input matInput type="number" placeholder="Min value" [(ngModel)]="min">
+        </mat-form-field>
+      </div>
+    </div>
 
-</mat-form-field>
 </div>
