--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "../node_modules/bootstrap/scss/bootstrap";
+
+.center{
+  text-align: center;
+}
+.margin-bot{
+  margin-bottom: 30px;
+}
