--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="center">
-  <h1 >{{title}}</h1>
+<div class="text-center">
+  <h1>{{title}}</h1>
+</div>
+<div class="text-center mb-5">
+   <img alt="World" src="assets/logo_img.png">
 </div>
 
-
-<button mat-stroked-button>foo</button>
 <app-airport-names></app-airport-names>
