--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-.center{
-  text-align: center;
-}
-.margin-bot{
-  margin-bottom: 30px;
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
 }
