--- a/src/app/airport-names/airport-names.component.html
+++ b/src/app/airport-names/airport-names.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col text-center mb-3">
+    <div class="col text-center mb-4">
       <mat-form-field>
         <mat-label>Choose Airport</mat-label>
         <mat-select>
@@ -12,14 +12,14 @@
     </div>
   </div>
   <div class="row">
-    <div class="col text-center">
+    <div class="col text-center mb-4">
       <mat-form-field>
         <input matInput type="number" placeholder="Nights to stay from" [(ngModel)]="min">
       </mat-form-field>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center mb-3">
+    <div class="col text-center mb-4">
       <mat-form-field>
        <input matInput type="number" placeholder="Nights to stay to" [(ngModel)]="max">
       </mat-form-field>
@@ -34,7 +34,7 @@
   tickInterval="1"
   step="1"
   min="1"
-  max="1000"></mat-slider>
+  max="1000" (input)="changeValue($event)"></mat-slider>
   </div>
   </div>
 </div>
