--- a/src/app/airport-names/airport-names.component.html
+++ b/src/app/airport-names/airport-names.component.html
@@ -14,20 +14,20 @@
   <div class="row">
     <div class="col text-center mb-4">
       <mat-form-field>
-        <input matInput type="number" placeholder="Nights to stay from" [(ngModel)]="min">
+        <input matInput type="number" placeholder="Nights to stay from" [(ngModel)]="min" (input)="getNightsStayFrom($event)">
       </mat-form-field>
     </div>
   </div>
   <div class="row">
     <div class="col text-center mb-4">
       <mat-form-field>
-       <input matInput type="number" placeholder="Nights to stay to" [(ngModel)]="max">
+       <input matInput type="number" placeholder="Nights to stay to" [(ngModel)]="max" (input)="getNightsStayTo($event)">
       </mat-form-field>
 
     </div>
   </div>
   <div class="row">
-    <div class="col text-center">
+    <div class="col text-center mb-4">
   <mat-slider
   thumbLabel
   [displayWith]="formatLabel"
@@ -36,5 +36,10 @@
   min="1"
   max="1000" (input)="changeValue($event)"></mat-slider>
   </div>
+  </div>
+  <div class="row">
+    <div class="col text-center mb-4"  >
+   <button mat-fab color="primary">Search</button>
+    </div>
   </div>
 </div>
