--- a/src/app/airport-names/airport-names.component.scss
+++ b/src/app/airport-names/airport-names.component.scss
@@ -13,6 +13,12 @@ $slidercolor: rgb(0,153,230);
 mat-slider {
   width: 300px;
 }
+button{
+
+  align-items: center;
+  justify-content: space-around;
+
+}
 
 ::ng-deep .mat-accent .mat-slider-thumb {
     background-color: $slidercolor;
