--- a/src/app/airport-names/airport-names.component.html
+++ b/src/app/airport-names/airport-names.component.html
@@ -14,14 +14,14 @@
   <div class="row">
     <div class="col text-center mb-4">
       <mat-form-field>
-        <input matInput type="number" placeholder="Nights to stay from" [(ngModel)]="min" (input)="getNightsStayFrom($event)">
+        <input matInput type="number" placeholder="Nights to stay from" [(ngModel)]="min" (input)="getNightsStayFrom($event)" min="0" max="60">
       </mat-form-field>
     </div>
   </div>
   <div class="row">
     <div class="col text-center mb-4">
       <mat-form-field>
-       <input matInput type="number" placeholder="Nights to stay to" [(ngModel)]="max" (input)="getNightsStayTo($event)">
+       <input matInput type="number" placeholder="Nights to stay to" [(ngModel)]="max" (input)="getNightsStayTo($event)" min="0" max="60">
       </mat-form-field>
 
     </div>
