flight resault route complete

--- a/src/app/airport-names/airport-names.component.html
+++ b/src/app/airport-names/airport-names.component.html
@@ -1,3 +1,6 @@
+<div class="text-center mb-5">
+   <img alt="World" src="assets/logo_img.png">
+</div>
 <div class="container-fluid">
   <div class="row">
     <div class="col text-center mb-4">
@@ -39,7 +42,7 @@
   </div>
   <div class="row">
     <div class="col text-center mb-4"  >
-   <button mat-fab color="primary">Search</button>
+   <button mat-fab color="primary"  routerLink="/flightsResults">Search</button>
     </div>
   </div>
 </div>
