--- a/src/app/airport-names/airport-names.component.scss
+++ b/src/app/airport-names/airport-names.component.scss
@@ -29,3 +29,14 @@ button{
 ::ng-deep .mat-accent .mat-slider-track-fill {
     background-color: $slidercolor;
 }
+img {
+  width:500px;
+  height: 500px;
+  transition: all 0.3s ease-in-out 1s,8s;
+}
+img:hover
+{
+    cursor: default;
+    transform: rotate(360deg);
+    transition: all 8s ease-in-out 1s,8s;
+}
