fetch static data

--- a/src/app/flights-resaults/flights-resaults.component.html
+++ b/src/app/flights-resaults/flights-resaults.component.html
@@ -1,1 +1,5 @@
+<h2>flights list</h2>
+<ul *ngFor="let flightresult of Searchflights">
+  <li>{{flightresult.search_id}}</li>
+</ul>
 <p>flights-resaults works!</p>
